Add more connections

--- a/config.json
+++ b/config.json
@@ -8,5 +8,10 @@
     "from": "Gerlafingen",
     "to": "Olten",
     "time": "07:34"
+  },
+  {
+    "from": "Solothurn",
+    "to": "Olten",
+    "time": "08:01"
   }
 ]
