--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "dateformat": "^3.0.2",
+    "moment": "^2.19.2",
     "pushbullet": "^2.1.0"
   }
 }
