--- a/config.json
+++ b/config.json
@@ -2,16 +2,32 @@
   {
     "from": "Olten",
     "to": "Gerlafingen",
-    "time": "17.40"
+    "time": "17.40",
+    "weekdays": [
+      "mon",
+      "tue",
+      "wed",
+      "thu",
+      "fri"
+    ]
   },
   {
     "from": "Gerlafingen",
     "to": "Olten",
-    "time": "07:34"
+    "time": "07:34",
+    "weekdays": [
+      "mon",
+      "tue",
+      "thu"
+    ]
   },
   {
     "from": "Solothurn",
     "to": "Olten",
-    "time": "08:01"
+    "time": "08:01",
+    "weekdays": [
+      "wed",
+      "fri"
+    ]
   }
 ]
