--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 [
   {
-    "from": "Olten",
+    "from": "Zürich",
     "to": "Gerlafingen",
-    "time": "17:40",
+    "time": "18:30",
     "weekdays": [
       "mon",
       "tue",
@@ -13,7 +13,7 @@
   },
   {
     "from": "Gerlafingen",
-    "to": "Olten",
+    "to": "Zürich",
     "time": "07:34",
     "weekdays": [
       "mon",
@@ -23,7 +23,7 @@
   },
   {
     "from": "Solothurn",
-    "to": "Olten",
+    "to": "Zürich",
     "time": "08:01",
     "weekdays": [
       "wed",
@@ -32,7 +32,7 @@
   },
   {
     "from": "Gerlafingen",
-    "to": "Olten",
+    "to": "Zürich",
     "time": "08:04",
     "weekdays": [
       "mon",
